--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             case 1:
                 planNameElement.textContent = 'Unlimited Calls';
                 planPriceElement.textContent = '£9.50/month';
-                planFeaturesElement.innerHTML = '<p>Feature 1</p><p>Feature 2</p><p>Feature 3</p>';
+                planFeaturesElement.innerHTML = '<p>Feature 1: Unlimited Calling</p><p>Feature 2: Use with any SIP Device</p><p>Feature 3: Free Voicemail (hosted Voicemail is £2.00 extra to acount for the storge of the messages)</p>';
                 break;
             case 2:
                 planNameElement.textContent = 'Phone System';
