--- a/acc.html
+++ b/acc.html
@@ -121,7 +121,7 @@
 			
 			<div class="video-containor svelte-nf3sn">
 			
-			<video autoplay="" loop="" muted="" controls="" src="adminintro.mp4" class="svelte-nf3sn"></video></div></article> 
+			<video autoplay="" loop="" controls="" src="adminintro.mp4" class="svelte-nf3sn"></video></div></article> 
 			
 			<h2 class="svelte-b7fbds" data-svelte-h="svelte-nu7tb1">Get Started</h2> 
 			
