--- a/acc.html
+++ b/acc.html
@@ -113,7 +113,7 @@
                     
 				</div> <div>
 			<h2>Help I can't Login</h2>
-				<p>This may be caused the login page being hosted on the server rather then the website,<br> Visit: <a href="http://voip.telephoneoffice.co.uk/ucp/">http://voip.telephoneoffice.co.uk/ucp/</a></p>
+				<p>This may be caused the login page being hosted on the server rather then the website,<br> Visit: <a href="http://voip1.telephoneoffice.co.uk/ucp/">http://voip1.telephoneoffice.co.uk/ucp/</a></p>
 			
                   </div>
 			
@@ -142,7 +142,7 @@ Acess Call Recordings and logs:</b> View call recording and call logs for your u
 				<b>
 Voicemail Control:</b> Listen to your Voicemail messages, change your pin, and Greetings all right from computer.
 <br><br>
-To take advantage of what Admin has to offer, call us at <b><a href="tel:03300433191">0330 043 3191</a></b>. Make your life simpler with Admin by Telephone Office today.</p>
+To take advantage of what Admin has to offer, call us at <b><a href="tel:03300435141">0330 043 5141</a></b>. Make your life simpler with Admin by Telephone Office today.</p>
 				</section>		
 				
 			
